# odin4

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LIBRARY_DOCUMENTATION.md  LICENSE  NOTICE  README.md  SECURITY.md  implementation_prompt.md  index.html  protocol_prompt.md  relatorio_diff_9a9bb34_b8f9968.md  relatorio_pos_v6.1.0.md  renovate.json  script.js  styles.css  version.json
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: build.yml  cflite.yml  clang-format-pr.yml  codeql.yml  cpp-modernize.yml  cppcheck.yml  migrate-to-cpp23.yml  odin4fix.yml  openhands-fix.yml  quality-pipeline.yml  refactorator.yml  release.yml  renovate.yml  sast.yml  scorecard.yml  version-badge.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  libodin4.so.5
docs/: LIBRARY_DOCUMENTATION.md  THOR_PROTOCOL.md
include/odin4/: fuzz_utils.h  odin4.h
infra/: Dockerfile  build.sh
lib/lz4/: lz4.c  lz4.h  lz4frame.c  lz4frame.h  lz4hc.c  lz4hc.h  xxhash.c  xxhash.h
lib/picohash/: ExampleFile  picohash.c
packaging/linux/: odin4.desktop
packaging/macos/: Info.plist  odin4.icns
packaging/windows/: setup.iss
reports/: cppcheck.xml
src/: CMakeLists.txt  firmware_package.cpp  firmware_package.h  fuzz_utils.cpp  logger.cpp  logger.h  main.cpp  odin4.cpp  odin_types.h  thor_protocol.h  usb_device.cpp  usb_device.h
src-gui/: main.cpp
src/cli/: main.cpp
src/core/: logger.cpp  logger.h  odin_types.h
src/firmware/: firmware_package.cpp  firmware_package.h
src/gui/: app.rc  main.cpp  resources.qrc
src/protocol/: thor_protocol.h
src/usb/: odin_protocol.cpp  usb_device.cpp  usb_device.h
tests/: fuzz_lz4.cpp  fuzz_pit.cpp  fuzz_tar.cpp  fuzz_thor.cpp  main.cpp  test_framework.h  test_logger.cpp  test_lz4_api.cpp  test_lz4frame_api.cpp  test_odin_types.cpp  test_sanitize_filename.cpp  test_thor_protocol.cpp  tests  tests.cpp
udev/: 60-odin4.rules
